<resources>
    <string name="app_name">嗨萌</string>
    <string name="net_error_tip">当前网络不可用，请检查你的网络设置</string>
    <string name="opera_quit">退出</string>
    <string name="search_header">搜</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="press_again_backrun">再按一次后台运行</string>
    <string name="press_again_exit">再按一次退出应用</string>
    <string name="app_is_run_background">在飞聊天Demo正在后台运行</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_from_bottom_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">正在载入…</string>
    <string name="no_datas">暂未获取到任何数据</string>
    <string name="loading">数据加载中， 请稍候&#8230;</string>
    <string name="error_open_camera_error">摄像头权限被禁止！</string>
    <string name="Video_footage">拍摄录像</string>
    <string name="temporary_does_not">暂不支持大于20M的视频！</string>
    <string name="search_tips">搜索关键字</string>
    <string name="error_generic_error">网络连接出现错误！</string>
    <string name="error_generic_server_down">连接不上服务器，请重试！</string>
    <string name="parse_json_erro">服务器数据异常!</string>
    <string name="error_no_internet">没有连接到网络</string>
    <string name="error_server_down">服务器异常，请稍候再试...</string>
    <string name="other_login">使用其他方式登录</string>
    <string name="main_treasure">寻宝</string>
    <string name="main_homepager">消息</string>
    <string name="main_contact_book">通讯</string>
    <string name="main_contact_book2">通讯录</string>
    <string name="main_contact">人脉</string>
    <string name="main_discover">发现</string>
    <string name="main_mine">个人</string>
    <string name="main_mine2">个人中心</string>
    <string name="shark_it_off_ing">正在搜寻同一时\n刻摇晃手机的人</string>
    <string name="shark_it_off">摇晃手机，寻找好友</string>
    <string name="shark_hola_man">打招呼的人</string>
    <string name="shark_history">摇到的历史</string>
    <string name="shark_message">摇一摇消息</string>
    <string name="shark_set">摇一摇设置</string>
    <string name="personall_icon">个人头像</string>
    <string name="action_clip">裁剪</string>
    <string name="msg_camera_invalid_permission_denied">无法打开相机，可能是权限被拒绝</string>
    <string name="msg_camera_invalid_initial_failed">相机初始化失败，无法打开相机</string>
    <string name="msg_camera_invalid_unknown_error">无法打开相机，未知错误</string>
    <string name="msg_could_not_save_photo">无法保存图片</string>
    <string name="msg_clipping_image">正在裁剪图片</string>
    <string name="success_save">已成功保存到本地</string>
    <string name="richscan_add_my_to_friend">扫一扫上面的二维码图案，加我为好友</string>
    <string name="my_qrcode">我的二维码</string>
    <string name="no_name_tip">名字不能为空，请填写</string>
    <string name="not_filled">未填写</string>
    <string name="account_and_safe">账号与安全</string>
    <string name="new_alerts">新消息通知</string>
    <string name="privacy">隐私</string>
    <string name="general">通用</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="about">关于我们</string>
    <string name="exit_login">退出登录</string>
    <string name="set">设置</string>
    <string name="exit_login_tip">退出后不会删除任务历史数据，下次登录依然可以使用本账号。</string>
    <string name="app_num">嗨萌号</string>
    <string name="qq_num">QQ号</string>
    <string name="phone_num">手机号</string>
    <string name="email_address">邮箱地址</string>
    <string name="password">密码</string>
    <string name="account_protect">账号保护</string>
    <string name="receive_new_alerts">接收新消息通知</string>
    <string name="notify_the_display_messages">通知显示消息详情</string>
    <string name="not_disturb_function_of_news">功能消息免打扰</string>
    <string name="voice">声音</string>
    <string name="vibration">振动</string>
    <string name="circle_of_friends_photo_update">朋友圈照片更新</string>
    <string name="notify_the_display_messages_tip">关闭后，当收到微信消息时，通知提示将不显示发信人和内容摘要。</string>
    <string name="not_disturb_function_of_news_tip">设置系统功能消息提示声音和振动的时段。</string>
    <string name="vibration_tip">当嗨萌在运行时，你可以设置是否需要声音或者振动。</string>
    <string name="circle_of_friends_photo_update_tip">关闭后。有朋友更新照片时，界面下面的“发现”切换按钮上不再出现红点提示。</string>
    <string name="add_me_as_friend_needs_to_prove_it">加我为朋友时需要验证</string>
    <string name="add_my_way">添加我的方式</string>
    <string name="friend_recommended_to_me_my_address_book">向我推荐通讯录朋友</string>
    <string name="after_opening_recommend">开启后，为你推荐已经开通嗨萌的手机联系人。</string>
    <string name="address_book_list">通讯录黑名单</string>
    <string name="donot_let_him_see_my_circle_of_friends">不让他（她）看我的朋友圈</string>
    <string name="donot_look_at_him_circle_of_friends">不看他（她）的朋友圈</string>
    <string name="allow_strangers_to_see_ten_circle_of_friends">允许陌生人查看十条朋友圈</string>
    <string name="only_show_friends_in_recent_half_a_year_circle_of_friends">仅向朋友展示最近半年的朋友圈</string>
    <string name="to_score">去评分</string>
    <string name="function_introduction">功能介绍</string>
    <string name="system_informs">系统通知</string>
    <string name="complaint">投诉</string>
    <string name="my_loose_change">我的零钱</string>
    <string name="recharge">充值</string>
    <string name="withdraw">提现</string>
    <string name="wallet">钱包</string>
    <string name="people_nearby">附近的人</string>
    <string name="only_look_at_the_girl">只看女生</string>
    <string name="only_look_at_the_boy">只看男生</string>
    <string name="see_all">查看全部</string>
    <string name="friend_circle">朋友圈</string>
    <string name="small_video">拍小视频</string>
    <string name="local_small_video">本地小视频</string>
    <string name="take_photos">拍照</string>
    <string name="from_the_mobile_phone_photo_album_choice">从手机相册选择</string>
    <string name="replace_the_album_cover">更换相册封面</string>
    <string name="vacum_up">清空</string>
    <string name="message_list">消息列表</string>
    <string name="delete">删除</string>
    <string name="take_a_photo">拍一张</string>
    <string name="font_size">字体大小</string>
    <string name="chat_bg">聊天背景</string>
    <string name="my_face">我的表情</string>
    <string name="photos_videos">照片和视频</string>
    <string name="receiver_model">听筒模式</string>
    <string name="function">功能</string>
    <string name="chat_logs_migration">聊天记录迁移</string>
    <string name="memory_space">存储空间</string>
    <string name="empty_chat_record">清空聊天记录</string>
    <string name="empty_all_chat_record_tip">将删除所有个人和群的聊天记录。</string>
    <string name="select_background">选择背景图</string>
    <string name="apply_bg_to_chat_all_scenarios">将背景应用到所有聊天场景</string>
    <string name="set_photo_and_video_tip">拍摄或编辑后的内容保存到系统相册</string>
    <string name="photo">照片</string>
    <string name="video">视频</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="only_at_night">只在夜间开启</string>
    <string name="not_disturb_tip">开启后，手机不会震动与发出提示音。如果设置为“只在夜间开启”，则只在22：00到8:00间生效。</string>
    <string name="can_find_me_through_the_following_way">可通过以下方式找到我:</string>
    <string name="close_other_users_not_find_you">关闭后，其他用户将不能通过上述信息找到你。</string>
    <string name="can_add_me_through_the_following_way">可通过以下方式添加我：</string>
    <string name="group_chat">群聊</string>
    <string name="business_card">名片</string>
    <string name="save_photo">保存图片</string>
    <string name="set_up_notes_and_labels">设置备注和标签</string>
    <string name="people_from_nearby">来自附近的人</string>
    <string name="greet">打招呼</string>
    <string name="details">详细资料</string>
    <string name="area">地区</string>
    <string name="personalized_signature">个性签名</string>
    <string name="source">来源</string>
    <string name="mis_folder_all">所有图片</string>
    <string name="mis_preview">预览</string>
    <string name="mis_msg_no_camera">没有找到系统的相机</string>
    <string name="mis_msg_amount_limit">所选图片超过了数量限制</string>
    <string name="mis_action_done">完成</string>
    <string name="mis_action_button_string">%1$s(%2$d/%3$d)</string>
    <string name="mis_photo_unit">Shot</string>
    <string name="mis_tip_take_photo">拍照</string>
    <string name="mis_error_image_not_exist">Image error</string>
    <string name="mis_error_no_permission">没有权限</string>
    <string name="mis_permission_dialog_title">权限被拒绝</string>
    <string name="mis_permission_dialog_ok">OK</string>
    <string name="mis_permission_dialog_cancel">取消</string>
    <string name="mis_permission_rationale">存储器读权限需要选择文件.</string>
    <string name="mis_permission_rationale_write_storage">存储写入权限需要保存图像.</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="weixin_app_id2">wxac34006c18243289</string>
    <string name="weixin_app_id">wxcd7d86f3f2c04077</string>
    <string name="weixin_app_secret">dd51e4ff815cfe313551a86a6402e886</string>
    <string name="qq_app_id">1105914390</string>
    <string name="qq_app_key">SbGk2WdT16aUKe4Z</string>
    <string name="alipay_app_id">2016092201948966</string>
    <string name="giving_orientation_privileges">请给予定位权限，否则获取不了附近的人.</string>
    <string name="giving_orientation_privileges_fail">抱歉，定位失败TAT</string>
    <string name="change_phone_num_tip">已启用手机通讯录匹配。如果你的通讯录中有朋友注册了嗨萌，系统会通知你</string>
    <string name="check_mobile_phone_address_book">查看手机通讯录</string>
    <string name="change_phone">更换手机号</string>
    <string name="binding_phone">绑定手机号</string>
    <string name="change_phone_sms_tip">更换手机后，下次登录可使用新手机号登录。当前手机号：</string>
    <string name="next_step">下一步</string>
    <string name="write_phone">请填写新手机号码</string>
    <string name="phone_number_the_same_as_current_binding_phone">该手机号与当前绑定的手机号相同</string>
    <string name="confirm_phone_number">确认手机号码</string>
    <string name="send_verification_code_sms">我们将发送验证码短信到这个号码：</string>
    <string name="ok">好</string>
    <string name="phone_num_no_empty">手机号码不能为空</string>
    <string name="message_authentication_code_has_sent">短信验证码已发送，请填写验证码</string>
    <string name="sms_code">验证码</string>
    <string name="input_sms_code">请输入验证码</string>
    <string name="submit">提交</string>
    <string name="not_get_verification_code">收不到验证码？</string>
    <string name="input_verification_code">填写验证码</string>
    <string name="repeat_get_verification_code">重新获取验证码</string>
    <string name="back_repeat_get_verification_code">验证码短信可能略有延迟，确定返回并重新开始？</string>
    <string name="verify_old_phone">更换手机前，需要先验证当前绑定的手机号,当前手机号：</string>
    <string name="verify_this_phone">验证当前绑定手机</string>
    <string name="the_idea_of_the_moment">这一刻的想法...</string>
    <string name="current_location">所在位置</string>
    <string name="who_can_see">谁可以看</string>
    <string name="remind_who_see">提醒谁看</string>
    <string name="send_text">发送文字</string>
    <string name="send">发送</string>
    <string name="sure_delete">确定删除吗</string>
    <string name="giving_video_permissions">需要视频权限</string>
    <string name="giving_camera2_permissions">需要相机权限</string>
    <string name="giving_album_permissions">需要相册权限</string>
    <string name="giving_audio_permissions">需要声音权限</string>
    <string name="giving_system_permissions">添加系统设置权限</string>
    <string name="giving_camera_permissions">请给予相机权限，否则无法正常在朋友圈发布相片或者视频.</string>
    <string name="if_exit_edit">退出此次编辑？</string>
    <string name="search_the_specified_content">搜索以下内容</string>
    <string name="open_see">公开</string>
    <string name="privacy_see">私密</string>
    <string name="part_of_the_visible">部分可见</string>
    <string name="no_give_anyone_see">不给谁看</string>
    <string name="all_can_see">所有朋友可见</string>
    <string name="only_the_visible">仅自己可见</string>
    <string name="selected_friends_see">选中的朋友可见</string>
    <string name="copy">复制</string>
    <string name="rewarding">转发</string>
</resources>