<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_round_no_stroke"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_dia_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_22"
        android:text="@string/confirm_phone_number"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_36" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/send_verification_code_sms"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_36" />

    <TextView
        android:id="@+id/tv_dia_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_6"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_30" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_22"
        android:background="@color/text_color_gray_a"
        android:paddingTop="1px"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_close"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:textColor="@color/color_lan"
            android:text="@string/mis_permission_dialog_cancel" />

        <Button
            android:id="@+id/bt_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1px"
            android:layout_weight="1"
            android:textColor="@color/color_lan"
            android:background="@color/white"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>