<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_people_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_copy"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/actionsheet_top_selector"
            android:gravity="center_vertical"
            android:text="@string/copy"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_rewarding"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/actionsheet_middle_selector"
            android:gravity="center_vertical"
            android:text="@string/rewarding"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/actionsheet_bottom_selector"
            android:gravity="center_vertical"
            android:text="@string/delete"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>