<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <include layout="@layout/common_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="18dp"
        android:paddingLeft="18dp"
        android:paddingTop="10dp"
        android:textSize="14sp"
        android:textColor="@color/text_color_gray_6"
        android:text="@string/can_find_me_through_the_following_way"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.5dp"
        android:background="@color/line_color_gray_d2"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/personal_bt_selector"
            android:layout_marginTop="1dp"
            android:paddingRight="16.5dp"
            android:paddingLeft="16.5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="16.5dp"
                android:textSize="17.5sp"
                android:textColor="@color/black"
                android:text="@string/phone_num"/>

            <ToggleButton
                android:id="@+id/sb_phone_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@drawable/selector_switch_bt"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn=""
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <View
            android:layout_width="16.5dp"
            android:layout_height="1dp"
            android:background="@color/white"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/personal_bt_selector"
            android:layout_marginBottom="1dp"
            android:paddingRight="16.5dp"
            android:paddingLeft="16.5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="16.5dp"
                android:textSize="17.5sp"
                android:textColor="@color/black"
                android:text="@string/app_num"/>

            <ToggleButton
                android:id="@+id/sb_app_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@drawable/selector_switch_bt"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn=""
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="18dp"
            android:paddingLeft="18dp"
            android:paddingTop="8dp"
            android:textSize="14sp"
            android:background="@color/background_color"
            android:textColor="@color/text_color_gray_6"
            android:text="@string/close_other_users_not_find_you"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="18dp"
            android:paddingLeft="18dp"
            android:paddingTop="12dp"
            android:paddingBottom="@dimen/dp_10"
            android:textSize="14sp"
            android:background="@color/background_color"
            android:textColor="@color/text_color_gray_6"
            android:text="@string/can_add_me_through_the_following_way"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/personal_bt_selector"
            android:layout_marginTop="1dp"
            android:paddingRight="16.5dp"
            android:paddingLeft="16.5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="16.5dp"
                android:textSize="17.5sp"
                android:textColor="@color/black"
                android:text="@string/group_chat"/>

            <ToggleButton
                android:id="@+id/sb_group_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@drawable/selector_switch_bt"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn=""
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <View
            android:layout_width="16.5dp"
            android:layout_height="1dp"
            android:background="@color/white"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/personal_bt_selector"
            android:paddingRight="16.5dp"
            android:paddingLeft="16.5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="16.5dp"
                android:textSize="17.5sp"
                android:textColor="@color/black"
                android:text="@string/my_qrcode"/>

            <ToggleButton
                android:id="@+id/sb_my_qrcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@drawable/selector_switch_bt"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn=""
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <View
            android:layout_width="16.5dp"
            android:layout_height="1dp"
            android:background="@color/white"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/personal_bt_selector"
            android:layout_marginBottom="1dp"
            android:paddingRight="16.5dp"
            android:paddingLeft="16.5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="16.5dp"
                android:textSize="17.5sp"
                android:textColor="@color/black"
                android:text="@string/business_card"/>

            <ToggleButton
                android:id="@+id/sb_business_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@drawable/selector_switch_bt"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn=""
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>